bk_ida/gccida/g2/integer_pow2p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integer_pow2p/src/tree.c:1379:14: error: expected identifier or '('
 struct expr = expr->vector.elements; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integer_pow2p/src/tree.c:1397:17: error: expected expression
v6 = *( _OWORD *)&expr->block.vars; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integer_pow2p/src/tree.c:1397:9: error: use of undeclared identifier '_OWORD'
v6 = *( _OWORD *)&expr->block.vars; 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/integer_pow2p/src/obj/tree.o] Error 1
